--- a/gb/19/12/13/n11720122.md
+++ b/gb/19/12/13/n11720122.md
@@ -1,18 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fyvn2199/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fyvn2199/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/fyvn2199/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fyvn2199/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fyvn2199/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fyvn2199/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fyvn2199/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>寻找性价比最高薯条 墨尔本男子一年跑遍鱼薯店</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2019/12/french-fries-923687_1920-600x400.jpg" />
 <h6>薯条示意图。（Pixabay）
 </h6>
 <hr>
-<p>【大纪元2019年12月13日讯】（大纪元记者沈诗昂<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）为了找到墨尔本性价比最高的<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E8%96%AF%E6%9D%A1.md#1">薯条</a>，一名男子用了将近一年时间几乎跑遍了墨尔本所有的<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E9%B1%BC%E8%96%AF%E5%BA%97.md#1">鱼薯店</a>。</p>
-<p>据3aw电台报导，盖特尼斯（Brandon Gatgens）有一次在酒吧与朋友聊天时谈到了有关<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E8%96%AF%E6%9D%A1.md#1">薯条</a>的话题，当时他们提出了两个问题，一个是“你应该为最小包薯条付多少钱？”，另一个是“你应该得到多少根薯条？”</p>
-<p>从那以后，盖特尼斯开始了他的薯条调研行动。他用将近一年的时间跑遍了<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>各地的<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E9%B1%BC%E8%96%AF%E5%BA%97.md#1">鱼薯店</a>，购买一份最小包薯条，然后称一下它的重量。</p>
+<p>【大纪元2019年12月13日讯】（大纪元记者沈诗昂<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>编译报导）为了找到墨尔本性价比最高的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%96%AF%E6%9D%A1.md#1">薯条</a>，一名男子用了将近一年时间几乎跑遍了墨尔本所有的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%B1%BC%E8%96%AF%E5%BA%97.md#1">鱼薯店</a>。</p>
+<p>据3aw电台报导，盖特尼斯（Brandon Gatgens）有一次在酒吧与朋友聊天时谈到了有关<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%96%AF%E6%9D%A1.md#1">薯条</a>的话题，当时他们提出了两个问题，一个是“你应该为最小包薯条付多少钱？”，另一个是“你应该得到多少根薯条？”</p>
+<p>从那以后，盖特尼斯开始了他的薯条调研行动。他用将近一年的时间跑遍了<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A2%A8%E5%B0%94%E6%9C%AC.md#1">墨尔本</a>各地的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E9%B1%BC%E8%96%AF%E5%BA%97.md#1">鱼薯店</a>，购买一份最小包薯条，然后称一下它的重量。</p>
 <p>盖特尼斯说，他的调研既没有发现最小包薯条的价格与薯条的数量之间存在任何关系，也没有发现一个地区的富裕程度与薯条份量之间有关系。</p>
 <p>他说：“人们的花费和获得的薯条份量在不同的鱼薯店之间差异非常大，我们有时会花6澳元买一份最小包薯条，它只有300克，而有时我们只花3澳元买一份最小包薯条，它却有700克。”</p>
 <p>盖特尼斯表示，他不想对薯条的质量进行评分，只是考察其数量。</p>
-<p>他说：“ Instagram上有很多人在为<ahref="https://github.com/fyvn2199/djy/blob/master/gb/tag/%E7%BE%8E%E9%A3%9F.md#1">美食</a>评分，我这里不提供意见，我只提供事实！”</p>
+<p>他说：“ Instagram上有很多人在为<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%BE%8E%E9%A3%9F.md#1">美食</a>评分，我这里不提供意见，我只提供事实！”</p>
 <p>根据盖特尼斯的调查，目前性价比最高的是Williamstown区Hobsons Bay Fish &amp; Chip Shop鱼薯店出售的薯条，在这里人们只需花4澳元就能买到688克薯条。</p>
 <p>责任编辑：李欣然</p>
 
@@ -20,42 +20,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/19/9/24/n11542613.md#1">物美价廉文化多元美食遍地 墨市富士贵入选全球最酷社区</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/19/10/7/n11574792.md#1">快递经营：博士山马来风味餐馆再返餐饮业</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/19/10/28/n11617153.md#1">“探索梦号”首航悉尼? 开启亚洲邮轮环球之路</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/19/11/1/n11626509.md#1">墨尔本港Docklands开放最新的新鲜食品区</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/19/12/4/n11699257.md#1">Beachcomber海滨餐厅：节日聚餐的绝佳之选</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/31/n12149308.md#1">【货币市场】美中关系恶化促人民币贬值</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12146297.md#1">维州女子酒店隔离 熨斗制作甜点</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12146231.md#1">维州若取消印花税 哪些城区买房受益最多</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/26/n12136652.md#1">买车专门用来出租 墨尔本女子月入1,000澳元</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/30/n12148420.md#1">墨尔本抗议《港版国安法》 吁澳保护港生</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/9/24/n11542613.md#1">物美价廉文化多元美食遍地 墨市富士贵入选全球最酷社区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/7/n11574792.md#1">快递经营：博士山马来风味餐馆再返餐饮业</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/10/28/n11617153.md#1">“探索梦号”首航悉尼? 开启亚洲邮轮环球之路</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/11/1/n11626509.md#1">墨尔本港Docklands开放最新的新鲜食品区</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/4/n11699257.md#1">Beachcomber海滨餐厅：节日聚餐的绝佳之选</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/3/7/n11922895.md#1">维州新增10916例感染 新州新增21494例</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678342.md#1">吉林方舱医院工地出疫情 上海叫停现场扫墓</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678237.md#1">疫情致医院人手短缺 逾十辆救护车院外滞留</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678220.md#1">化学品泄漏污染水道 墨尔本湖泊漂浮大量死鱼</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677867.md#1">澳洲摄影师荣获2022年奥斯卡最佳摄影奖</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/2/10/n11858311.md#1" target="_blank">王友群：习仲勋等支持气功研究的内幕</a></li><li><a href="https://github.com/fyvn2199/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977691.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(1) 不一样的人生</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank">中共迫害良心律师</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/25/n10666303.md#1" target="_blank">观雨堂主：大陆高校的“秘密信息员”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/11/1/21/n3149437.md#1" target="_blank">追查国际关于天安门自焚伪案十年说明</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12147002.md#1">川普宣布对华政策重大转变 涉及六大领域</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/28/n12143183.md#1">班农向蔡英文喊话：这是台湾的时刻！</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12147143.md#1">川普：取消香港特惠待遇 涉所有领域</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12145153.md#1">【最新疫情5·29】川普：终止与世卫合作</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12147250.md#1">38军退伍军人传国家文件 为何令610恐慌</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/28/n12144374.md#1">香港文艺界记者会 众星持续抵制港版国安法</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/28/n12144633.md#1">16年豪门婚姻破裂 何如芸泪洒法庭只求个道歉</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12146950.md#1">蔡英文造访台北铜锣湾书店 何韵诗发文致谢</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12147321.md#1">自曝伪造身份参加高考 陆男星仝卓遭节目封杀</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12147132.md#1">从赌王儿子到创业老板 何猷君更改微博认证</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12145861.md#1">自称不吃不喝几十年 印度9旬瑜珈师离世</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/22/n12128808.md#1">世界唯一无坝引水都江堰  中华科学文明活见证</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/29/n12146535.md#1">唐人凿井千尺不见水 却误闯地下的神仙世界</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/1/n12076592.md#1">那一场雪天围炉</a></li>
-<li><a href="https://github.com/fyvn2199/djy/blob/master/gb/20/5/27/n12139736.md#1">为疫情点灯</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676864.md#1">【神韵原创音乐】2019 神韵交响乐《情系道缘》</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fyvn2199/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fyvn2199/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/13/n11720122.htm">寻找性价比最高薯条 墨尔本男子一年跑遍鱼薯店</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/12/13/n11720122.htm">寻找性价比最高薯条 墨尔本男子一年跑遍鱼薯店</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/fyvn2199/djy/blob/master/gb/19/12/13/n11720122.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fyvn2199/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fyvn2199/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fyvn2199/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fyvn2199/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fyvn2199/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/19/12/13/n11720122.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
